--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -6,11 +6,11 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="jquery_cdn/jquery.mobile-1.4.5.min.css">
 
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="jquery_cdn/jquery-1.11.3.min.js"></script>
 
-<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="jquery_cdn/jquery.mobile-1.4.5.min.js"></script>
 
 <style>
 
