--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -58,7 +58,7 @@ window.open("http://vivit-worldwide.org", "_parent");
 
 <div data-role="panel" id="myPanel">
 
-<img src="Community_1950x487.jpg" height="25%" width="100%">
+<img src="images\Community_1950x487.jpg" height="25%" width="100%">
 
 <div style='background-color:#518bc9;'> 
 
@@ -122,7 +122,7 @@ window.open("http://vivit-worldwide.org", "_parent");
 
 <div style='padding:15px;display:flex;justify-content:center;'>
 
-<img src="vivit_social_media.bmp">
+<img src="images\vivit_social_media.bmp">
 
 </div>
 
@@ -141,14 +141,14 @@ Version 1.0
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -156,10 +156,10 @@ Version 1.0
 
 <div data-role="main" class="ui-content">
 <div>
-<img src="head-ad.jpg" height="100%" width="100%">
+<img src="images\head-ad.jpg" height="100%" width="100%">
 </div>
 
-<img src="vivit_events.bmp" width="100%">
+<img src="images\vivit_events.bmp" width="100%">
 
 </div>
 
@@ -172,14 +172,14 @@ Version 1.0
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -188,12 +188,12 @@ Version 1.0
 
 <div data-role="main" class="ui-content">
 <div>
-<img src="head-ad.jpg" height="100%" width="100%">
+<img src="images\head-ad.jpg" height="100%" width="100%">
 </div>
 
-<object data="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf" type="application/pdf" width="100%" height="800px">
+<object data="images\2017_VivitMemberBrochure.pdf" type="application/pdf" width="100%" height="800px">
 
-alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMemberBrochure.pdf</a>
+alt : <a href="images\2017_VivitMemberBrochure.pdf">2017_VivitMemberBrochure.pdf</a>
 
 </object>
 
@@ -208,14 +208,14 @@ alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMe
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -223,10 +223,10 @@ alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMe
 
 <div data-role="main" class="ui-content">
 <div>
-<img src="head-ad.jpg" height="100%" width="100%">
+<img src="images\head-ad.jpg" height="100%" width="100%">
 </div>
 
-<img src="lugs_sigs.bmp" width="100%">
+<img src="images\lugs_sigs.bmp" width="100%">
 
 </div>
 
@@ -239,14 +239,14 @@ alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMe
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -254,10 +254,10 @@ alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMe
 
 <div data-role="main" class="ui-content">
 <div>
-<img src="head-ad.jpg" height="100%" width="100%">
+<img src="images\head-ad.jpg" height="100%" width="100%">
 </div>
 
-<img src="tech_beacon.bmp" width="100%">
+<img src="images\tech_beacon.bmp" width="100%">
 
 </div>
 
@@ -270,14 +270,14 @@ alt : <a href="C:\Users\fordm\Desktop\2017_VivitMemberBrochure.pdf">2017_VivitMe
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -302,14 +302,14 @@ alt : <a href="2017_VivitMemberBrochure.pdf">2017_VivitMemberBrochure.pdf</a>
 <div data-role="header" data-position="fixed" style='height:66px;background-color:white'>
 
 <span style='position:absolute;top:15px;left:20px;'>
-<a href="#myPanel"><img src="vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
+<a href="#myPanel"><img src="images\vivit_hamburger_menu.png" height="35px" style='padding-right:20px;'></a>
 <span style='position:absolute;top:0px;left:75px;font-size:24pt;'>Vivit&nbsp;Worldwide
 </span> 
 
 </span>
 
 <span style='position:absolute;float:right;top:12px;right:10px'>
-<img src="vivit_logo.png" height="45px" width="45px">
+<img src="images\vivit_logo.png" height="45px" width="45px">
 </span>
 
 </div>
@@ -318,7 +318,7 @@ alt : <a href="2017_VivitMemberBrochure.pdf">2017_VivitMemberBrochure.pdf</a>
 
 <div data-role="main" class="ui-content">
 <div>
-<img src="head-ad.jpg" height="100%" width="100%">
+<img src="images\head-ad.jpg" height="100%" width="100%">
 </div>
 <div>
 Notifications: <input type="checkbox" data-role="flipswitch" name="switch" id="switch" checked>
