--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,7 @@
 		<div id='mainHeader1' data-role='header' data-position='fixed' class='mainHeader'></div>
 
 		<div data-role='main' class='ui-content'>
-			<div><img src='images\head-ad.jpg' height='100%' width='100%'></div>
-
+			<div id='mainBannerAdd1'></div>
 			<img src='images\vivit_events.bmp' width='100%'>
 		</div>
 	</div>
@@ -42,9 +41,8 @@
 		<div id='mainHeader2' data-role='header' data-position='fixed' class='mainHeader'></div>
 
 		<div data-role='main' class='ui-content'>
-			<div><img src='images\head-ad.jpg' height='100%' width='100%'></div>
-
-			<object data='images\2017_VivitMemberBrochure.pdf' type='application/pdf' width='100%' height='800px'> alt : <a href='images\2017_VivitMemberBrochure.pdf'>2017_VivitMemberBrochure.pdf</a></object>
+			<div id='mainBannerAdd2'></div>
+			<img src='images\2017_VivitMemberBrochure.bmp' width='100%'>
 		</div>
 	</div>
 
@@ -52,8 +50,7 @@
 		<div id='mainHeader3' data-role='header' data-position='fixed' class='mainHeader'></div>
 
 		<div data-role='main' class='ui-content'>
-			<div><img src='images\head-ad.jpg' height='100%' width='100%'></div>
-
+			<div id='mainBannerAdd3'></div>
 			<img src='images\lugs_sigs.bmp' width='100%'>
 		</div>
 	</div>
@@ -62,25 +59,16 @@
 		<div id='mainHeader4' data-role='header' data-position='fixed' class='mainHeader'></div>
 
 		<div data-role='main' class='ui-content'>
-			<div><img src='images\head-ad.jpg' height='100%' width='100%'></div>
-
+			<div id='mainBannerAdd4'></div>
 			<img src='images\tech_beacon.bmp' width='100%'>
 		</div>
 	</div>
 
-	<div id='vivitWebsite' data-role='page'>
+	<div id='appSettings' data-role='page'>
 		<div id='mainHeader5' data-role='header' data-position='fixed' class='mainHeader'></div>
 
 		<div data-role='main' class='ui-content'>
-		</div>
-	</div>
-
-	<div id='appSettings' data-role='page'>
-		<div id='mainHeader6' data-role='header' data-position='fixed' class='mainHeader'></div>
-
-		<div data-role='main' class='ui-content'>
-			<div><img src='images\head-ad.jpg' height='100%' width='100%'></div>
-		
+			<div id='mainBannerAdd5'></div>
 			<div>
 				Notifications: <input type='checkbox' data-role='flipswitch' name='switch' id='switch' checked>
 			</div>
