--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,6 +18,7 @@
 		<link rel='stylesheet' href='jquery_cdn/jquery.mobile-1.4.5.min.css'>
 		<link rel='stylesheet' href='source/vivitMobile.css'>
 		
+		<script src="cordova.js"></script>
 		<script src='jquery_cdn/jquery-1.11.3.min.js'></script>
 		<script src='jquery_cdn/jquery.mobile-1.4.5.min.js'></script>
 		<script src='source/vivitMobile.js'></script>
